# python

./: .gitignore  README.md  concatenate_ans.txt  demo.py
CodeWithHarrayProblem/: demo.py  hello.py
Codeforces/: A_Brain_s_Photos.py  A_Business_trip.py  A_Everyone_Loves_to_Sleep.py  A_Filling_Diamonds.py  A_Nastia_and_Nearly_Good_Numbers.py  A_Rook.py  A_Rotate.py  A_The_number_of_positions.py  B_01_Game.py  B_Buttons.py  B_Cormen_The_Best_Friend_Of_a_Man.py  B_Kana_and_Dragon_Quest_game.py  B_Multiply_by_2_divide_by_6.py  B_Not_Overflow.py  B_Squares_and_Cubes.py  B_YetnotherrokenKeoard.py  C_Minimum_Extraction.py  C_Opposite_Task.py  C_Removal_of_Unattractive_Pairs.py  C_Unique_Number.py  D_Balanced_Round.py  D_Distinct_Split.py  D_Exponential_or_Quadratic.py  E_Horizon.py  F_Edge_Checker.py  G_Complicated_GCD.py  H_Digit_Machine.py  J_Good_morning.py  K_Four_Points.py  L_Move_Right.py  M_Lacked_Number.py  N_Jogging.py  O_2_N.py  Q_Median.py  R_Last_Two_Digits.py  S_You_should_output_ARC_though_this_is_ABC.py  T_Bit_Strings.py  U_A_to_Z_String_2.py  (+6 more)
FASTAPI/classTeacher/: main.py  pyproject.toml  storage.db
FASTAPI/classTeacher/api/: courses.py  sections.py  users.py
FASTAPI/classTeacher/db/: database.py
FASTAPI/classTeacher/db/model/: course.py  mixins.py  user.py
FASTAPI/classTeacher/myenv/: pyvenv.cfg
FASTAPI/mysqlAndfastapi/: main.py  pyproject.toml
FASTAPI/mysqlAndfastapi/config/: db.py
FASTAPI/mysqlAndfastapi/models/: user.py
FASTAPI/mysqlAndfastapi/routes/: user.py
FASTAPI/mysqlAndfastapi/schemas/: user.py
bot/firstbot/: pyproject.toml
(+119 files in other folders)
