[tool.poetry]
name = "classteacher"
version = "0.1.0"
description = ""
authors = ["yasin-arafat-05 <yasinarafat.e2021@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.1"
alembic = "^1.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
