[tool.poetry]
name = "firstbot"
version = "0.1.0"
description = ""
authors = ["yasin-arafat-05 <yasinarafat.e2021@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.6"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
